# STAX

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  PLAN.md  README.md  run.bat  run.ps1  run.sh
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: pre-push
.github/workflows/: ci.yml  pages.yml
crates/stax-arrange/: Cargo.toml
crates/stax-arrange/src/: lib.rs
crates/stax-audio/: Cargo.toml
crates/stax-audio/src/: lib.rs
crates/stax-core/: Cargo.toml
crates/stax-core/src/: error.rs  form.rs  function.rs  lib.rs  op.rs  signal.rs  stream.rs  value.rs
crates/stax-dsp/: Cargo.toml
crates/stax-dsp/src/: lib.rs
crates/stax-dsp/tests/: dsp_stress.rs
crates/stax-editor/: Cargo.toml  Trunk.toml  index.html
crates/stax-editor/src/: app.rs  debug.rs  dot.rs  expr.rs  fnport.rs  graph.rs  lib.rs  main.rs  scope.rs  shell.rs  syntax.rs  text.rs
crates/stax-editor/tests/: ui.rs
crates/stax-eval/: Cargo.toml
crates/stax-eval/src/: env.rs  interp.rs  lib.rs
crates/stax-eval/tests/: integration.rs  language_stress.rs  rank_stress.rs  sapf_unit.rs
crates/stax-gpu/: Cargo.toml
crates/stax-gpu/src/: lib.rs
crates/stax-graph/: Cargo.toml
crates/stax-graph/src/: lib.rs
crates/stax-graph/tests/: fuzz.rs
crates/stax-io/: Cargo.toml
crates/stax-io/src/: lib.rs
crates/stax-jit/: Cargo.toml
crates/stax-jit/src/: lib.rs
crates/stax-parser/: Cargo.toml
crates/stax-parser/src/: lib.rs
crates/stax-parser/tests/: parser_stress.rs
crates/stax-plugin/: Cargo.toml
crates/stax-plugin/src/: lib.rs
design/: 01-editor.html  02-fnport.html  03-arrangement.html  04-session.html  05-mixer.html  06-text.html  README.md
examples/: Cargo.toml  repl.rs  smoke.rs
patches/: demo.stax
scripts/: install-hooks.sh
