[package]
name = "stax-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stax-core = { workspace = true }
stax-dsp  = { workspace = true }
anyhow    = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = { workspace = true }
