[package]
name    = "stax-editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stax-editor"
path = "src/main.rs"

[dependencies]
stax-core   = { workspace = true }
stax-eval   = { workspace = true }
stax-parser = { workspace = true }
stax-graph  = { workspace = true }
egui        = "0.31"
eframe      = { version = "0.31", features = ["default_fonts", "persistence"] }

[dev-dependencies]
egui_kittest = "0.31"
