[package]
name    = "stax-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stax-core = { workspace = true }
anyhow    = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
midir = { workspace = true }
rosc  = { workspace = true }
